--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,9 @@ test:
 #
 production:
   <<: *default
+  adapter: mysql2
   database: roadbike_groupride_production
-  username: roadbike_groupride
-  password: <%= ENV['ROADBIKE_GROUPRIDE_DATABASE_PASSWORD'] %>
+  username: root
+  password: <<%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+
