--- a/config/database.yml
+++ b/config/database.yml
@@ -52,6 +52,6 @@ production:
   adapter: mysql2
   database: roadbike_groupride_production
   username: root
-  password: <<%= ENV['DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
 
